--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "",
   "source": "src/index.html",
   "scripts": {
-    "start": "parcel src/index.html --open",  
-  "build": "parcel build ./src/index.html --public-url ./ --no-source-maps" 
+    "start": "parcel src/index.html --open",
+    "build": "parcel build ./src/index.html --public-url ./ --no-source-maps"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "parcel": "^2.9.3"
-  },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.9.3",
+    "parcel": "^2.9.3",
     "sass": "^1.64.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.1"
   }
 }
